@@ -1,6 +1,5 @@
 package org.zalando.logbook;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.BiPredicate;
 
@@ -8,7 +7,7 @@ interface DeleteHttpHeaders extends HttpHeaders {
 
     @Override
     default HttpHeaders delete(final String... names) {
-        return delete(Arrays.asList(names));
+        return delete(List.of(names));
     }
 
     @Override
